Update dependencies in requirements.txt
Removed and added various dependencies in requirements.txt.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,11 @@
 torch
-torchvision
-torchaudio
+numpy
+pandas
 transformers
 miditok
-miditoolkit
-datasets
-huggingface_hub
-gradio
 midi2audio
-scikit-learn
-tqdm
-numpy
+pretty_midi
+symusic
+huggingface_hub
+datasets
+gradio
